@@ -1,3 +1,10 @@
+1999-02-03  Sven Radej <radej@kde.org> (KMail-1.0.16)
+
+	* Bugfix:  possible segv-on-create-folder. Reciever is properly
+          shown (index design & version updated) in sent&queued mail.
+	  Fix agains overwriting last char in last message when appending 
+          new one to folder.
+
 1999-01-30  Stefan Taferner  <taferner@kde.org> (KMail-1.0.16)
 
 	* Removed obsolete / commented-out code.
